[gd_scene load_steps=2 format=3 uid="uid://bt248h6n23rs6"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_hw6xa"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hw6xa")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290196, 0.494118, 1, 1)

[node name="play_button" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 201.0
offset_right = 237.0
offset_bottom = 242.0
text = "Play"

[node name="settings_button" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 255.0
offset_right = 237.0
offset_bottom = 299.0
text = "Settings"

[node name="exit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 431.0
offset_right = 237.0
offset_bottom = 473.0
text = "Exit"

[node name="showcase_arena" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 111.0
offset_right = 1603.0
offset_bottom = 811.0
scale = Vector2(0.535, 0.535)
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="game_title" type="Label" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 22.0
offset_right = 873.0
offset_bottom = 68.0
text = "HyperPong!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="play_button" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="settings_button" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="exit_button" to="." method="_on_exit_button_button_up"]
